syntax = "proto3";
package proto;

import public "plugins/common/proto/common.proto";

message FetchAttestationDataRequest {}

message FetchAttestationDataResponse {
    bytes attestationData = 1;
}

service NodeAttestor {
    rpc FetchAttestationData(FetchAttestationDataRequest) returns (FetchAttestationDataResponse);
    rpc Configure(ConfigureRequest) returns (ConfigureResponse);
}
